[package]
name = "rust_ghostly_hollowing"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = true
lto = false


[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Wdk_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Wdk_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Wdk_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel"
]}
winapi = { version = "0.3.9", features = ["winnt"]}
ntapi = { version = "0.4.1" }
rust_syscalls = { path = "./rust_syscalls/", features = ["_INDIRECT_"] }
reqwest = {  version = "0.12.24", features = ["blocking"] }
ccommon_fn = { git = "https://github.com/Leonardo-Iordache/ccommon_fn.git", branch = "master"}
memoffset = { version = "0.9.1" }
